# koretoggle

./: .gitignore  PKGBUILD  PLAN.md  README.md  build-plasmoid.sh  install.sh  koretoggle-helper  metadata.json  org.koretoggle.toggle.policy  uninstall.sh
contents/ui/: main.qml
plugin/: CMakeLists.txt  commandrunner.cpp  commandrunner.h
